added week 3 update for FA

--- a/progress.yaml
+++ b/progress.yaml
@@ -87,8 +87,8 @@
     :response_url: 
     :votes: 
   :fantasyadventure:
-    :update: 
-    :update_url: 
+    :update: Dire Bears and mysteries – oh my!
+    :update_url: http://blog.fantasyadventuregame.com/2011/06/12/dire-bears-and-mysteries-oh-my/
     :response: 
     :response_url: 
     :votes: 
