Fixed typo in title

--- a/progress.yaml
+++ b/progress.yaml
@@ -38,7 +38,7 @@
     :response: ORB II
     :response_url: http://blog.allabrilyn.com/content/orb-ii
   :fantasyadventure:
-    :update: In Which Like Realizes He Hasn’t Planned Enough
+    :update: In Which Luke Realizes He Hasn’t Planned Enough
     :update_url: http://blog.fantasyadventuregame.com/2011/06/01/in-which-luke-realizes-he-hasnt-planned-enough/
     :response: Architecture Astronautry
     :response_url: http://blog.fantasyadventuregame.com/2011/06/04/week-1-response-architecture-astronautry/
