Add Week 3 Ab and O blog posts

--- a/progress.yaml
+++ b/progress.yaml
@@ -81,8 +81,8 @@
     :fantasyadventure: 0
     :oaqn: 0
   :allabrilyn:
-    :update: 
-    :update_url: 
+    :update: Controlling Controllers
+    :update_url: http://blog.allabrilyn.com/content/controlling-controllers
     :response: 
     :response_url: 
     :votes: 
@@ -93,8 +93,8 @@
     :response_url: 
     :votes: 
   :oaqn:
-    :update: 
-    :update_url: 
+    :update: Mapping the World
+    :update_url: http://blog.oaqn.com/2011/mapping-the-world
     :response: 
     :response_url: 
     :votes: 
