add week 3 poll url

--- a/progress.yaml
+++ b/progress.yaml
@@ -74,7 +74,7 @@
 -
   :week: 3
   :topic: Core Game Objects
-  :poll_url: 
+  :poll_url: http://community.bbgamezone.net/projects/so-play-we-all-week-3-core-game-objects/
   :hours: 3
   :votes:
     :allabrilyn: 0
