--- a/progress.yaml
+++ b/progress.yaml
@@ -85,19 +85,19 @@
     :update_url: http://blog.allabrilyn.com/content/controlling-controllers
     :response: 
     :response_url: 
-    :votes: 
+    :votes: 0
   :fantasyadventure:
     :update: Dire Bears and mysteries – oh my!
     :update_url: http://blog.fantasyadventuregame.com/2011/06/12/dire-bears-and-mysteries-oh-my/
     :response: 
     :response_url: 
-    :votes: 
+    :votes: 3
   :oaqn:
     :update: Mapping the World
     :update_url: http://blog.oaqn.com/2011/mapping-the-world
     :response: 
     :response_url: 
-    :votes: 
+    :votes: 5
 # -
 #   :week: 
 #   :topic: 
