Filled in Luke's response post, Jim's week 4 post + week 3 response

--- a/progress.yaml
+++ b/progress.yaml
@@ -83,13 +83,13 @@
   :allabrilyn:
     :update: Controlling Controllers
     :update_url: http://blog.allabrilyn.com/content/controlling-controllers
-    :response: 
-    :response_url: 
+    :response: ORB IV
+    :response_url: http://blog.allabrilyn.com/content/orb-iv
   :fantasyadventure:
     :update: Dire Bears and mysteries – oh my!
     :update_url: http://blog.fantasyadventuregame.com/2011/06/12/dire-bears-and-mysteries-oh-my/
-    :response: 
-    :response_url: 
+    :response: Peter won (again), but I'm still not bitter'
+    :response_url: http://blog.fantasyadventuregame.com/2011/06/17/peter-won-again-but-im-still-not-bitter/
   :oaqn:
     :update: Mapping the World
     :update_url: http://blog.oaqn.com/2011/mapping-the-world
@@ -105,8 +105,8 @@
     :fantasyadventure: 0
     :oaqn: 0
   :allabrilyn:
-    :update: 
-    :update_url: 
+    :update: Database Event!
+    :update_url: http://blog.allabrilyn.com/content/database-event
     :response: 
     :response_url: 
   :fantasyadventure:
