Added Luke's update for week 4

--- a/progress.yaml
+++ b/progress.yaml
@@ -110,8 +110,8 @@
     :response: 
     :response_url: 
   :fantasyadventure:
-    :update: 
-    :update_url: 
+    :update: Never trust a magician to do the army's job
+    :update_url: http://blog.fantasyadventuregame.com/2011/06/22/never-trust-a-magician-to-do-the-armys-job/
     :response: 
     :response_url: 
   :oaqn:
