Added FA update

--- a/progress.yaml
+++ b/progress.yaml
@@ -134,8 +134,8 @@
     :response: 
     :response_url: 
   :fantasyadventure:
-    :update: 
-    :update_url: 
+    :update: Anyone have a Roland?
+    :update_url: http://blog.fantasyadventuregame.com/2011/06/25/anyone-have-a-roland/
     :response: 
     :response_url: 
   :oaqn:
