--- a/progress.yaml
+++ b/progress.yaml
@@ -165,8 +165,8 @@
   :oaqn:
     :update: The Plumbing Works
     :update_url: http://blog.oaqn.com/2011/the-plumbing-works
-    :response: 
-    :response_url: 
+    :response: Rewriting My Competitors
+    :response_url: http://push.cx/2011/rewriting-my-competitors
 
 # -
 #   :week: 
