Week 7 poll and update urls

--- a/progress.yaml
+++ b/progress.yaml
@@ -170,15 +170,15 @@
 -
   :week: 7
   :topic: Content Generation
-  :poll_url: 
+  :poll_url: http://community.bbgamezone.net/projects/so-play-we-all-week-7-content-generation/msg24342/?topicseen#msg24342
   :hours: 4
   :votes:
     :allabrilyn: 0
     :fantasyadventure: 0
     :oaqn: 0
   :allabrilyn:
-    :update: 
-    :update_url: 
+    :update: Between Forms and Pages
+    :update_url: http://blog.allabrilyn.com/content/between-forms-and-pages
     :response: 
     :response_url: 
   :fantasyadventure:
@@ -187,8 +187,8 @@
     :response: 
     :response_url: 
   :oaqn:
-    :update: 
-    :update_url: 
+    :update: One Step Forward
+    :update_url: http://blog.oaqn.com/2011/one-step-forward
     :response: 
     :response_url: 
 
