Week 7: add Oaqn response

--- a/progress.yaml
+++ b/progress.yaml
@@ -189,8 +189,8 @@
   :oaqn:
     :update: One Step Forward
     :update_url: http://blog.oaqn.com/2011/one-step-forward
-    :response: 
-    :response_url: 
+    :response: Keeping Jim Busy
+    :response_url: http://push.cx/2011/keeping-jim-busy
 
 # -
 #   :week: 
