--- a/progress.yaml
+++ b/progress.yaml
@@ -251,8 +251,8 @@
   :allabrilyn:
     :update: Innocent Lost
     :update_url: http://blog.allabrilyn.com/content/innocence-lost
-    :response: 
-    :response_url: 
+    :response: ORB X
+    :response_url: http://blog.allabrilyn.com/content/orb-x
   :fantasyadventure:
     :update: git checkout -b sim_card_game
     :update_url: http://blog.fantasyadventuregame.com/2011/08/10/git-checkout-b-sim_card_game/
@@ -261,8 +261,8 @@
   :oaqn:
     :update: Laziness Pays Off
     :update_url: http://blog.oaqn.com/2011/laziness-pays-off
-    :response: 
-    :response_url: 
+    :response: Timing
+    :response_url: http://push.cx/2011/timing
 
 # -
 #   :week: 
